// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayPanel with nested children 1`] = `
<div
  className="display-panel"
>
  <div
    className="display-text"
  >
    <div>
      <h1>
        Test
      </h1>
    </div>
  </div>
</div>
`;

exports[`DisplayPanel with one child 1`] = `
<div
  className="display-panel"
>
  <div
    className="display-text"
  >
    <div />
  </div>
</div>
`;

exports[`DisplayPanel with two children 1`] = `
<div
  className="display-panel"
>
  <div
    className="display-text"
  >
    <h1>
      Test
    </h1>
    <div />
  </div>
</div>
`;

exports[`DisplayPanel without children 1`] = `
<div
  className="display-panel"
>
  <div
    className="display-text"
  />
</div>
`;
